--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,21 @@
-<h1>トップページ</h1>
+<div class="container">
+  <div class="row">
+    <table>
+      <div class="col-md-3">
+      </div>
+      <div class="col-md-6 mt-4">
+        <h1>welcome to <i class="fas fa-book"></i>Bookers !!</h1>
+    
+        <p>In <i class="fas fa-book"></i>Bookers,</p>
+        <p>you can share and exchange your opinions , inpressions , and emotions</p>
+        <p>about various books!</p>
+        
+        <%= link_to "Log in", new_user_session_path, class:"btn btn-primary btn-block"%>
+        
+        <%= link_to "Sign Up", new_user_registration_path, class:"btn btn-success btn-block" %>
+      </div>
+      <div class="col-md-3">
+      </div>
+    </table>
+  </div>
+</div>
