--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,5 +75,14 @@
     <% end %>
     </main>
     <%= yield %>
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 offset-md-5 mt-3">
+            <p>CopyRight Infratop.inc</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
